# billingclient

./: .gitignore  .testr.conf  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
billingclient/: __init__.py  client.py  shell.py
billingclient/common/: base.py  utils.py
billingclient/openstack/common/: _i18n.py  cliutils.py
billingclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
billingclient/tests/: fakes.py  test_client.py  utils.py
billingclient/v1/: __init__.py  client.py  core.py  shell.py
billingclient/v1/chart/: __init__.py  definition.py  shell.py
billingclient/v1/metric/: __init__.py  definition.py  shell.py
billingclient/v1/rating/gnocchi/: __init__.py  client.py  extension.py  shell.py
billingclient/v1/report/: __init__.py  shell.py
billingclient/v1/widget/: __init__.py  shell.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
