[metadata]
name = python-billingclient
summary = API client for NubeliU Billing
description-file =
    README.rst
author = Nubeliu
author-email = dev@nubeliu.com
home-page = http://www.nubeliu.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    billingclient

[entry_points]
console_scripts =
    billing = billingclient.shell:main

billing.client.modules =
    gnocchi = billingclient.v1.rating.gnocchi.extension:Extension

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = billingclient/locale
domain = python-billingclient

[update_catalog]
domain = python-billingclient
output_dir = billingclient/locale
input_file = billingclient/locale/python-billingclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = billingclient/locale/python-billingclient.pot
